<resources>
    <string name="app_name">wifiLibrary</string>

    <!-- Button label to connect to a wifi network-->
    <string name="connect">连接</string>
    <!--  !!!!!!!! vpn_connect_toTitle of VPN connect dialog -->
    <string name="wifi_connect_to">连接到 %s</string>
    <!-- Wi-Fi IP addrress label -->
    <string name="ip_address">IP 地址</string>
    <!-- Label for the signal strength -->
    <string name="signal">信号强度</string>

    <!-- Button caption to forget a wifi network -->
    <string name="forget_network">不保存</string>
    <!-- Label for status of connection -->
    <string name="wifi_status">状态</string>
    <!--Wi-Fi settings screen, summary text for network when connected -->
    <string name="status_connected">已连接</string>
    <string name="status_connecting">正在连接……</string>
    <!-- Label for link speed (wifi) -->
    <string name="wifi_link_speed">速度</string>
    <!-- Verbose wifi signal strength.  This is the best out of 4 levels. -->
    <string name="wifi_signal_3">强</string>
    <!-- Verbose wifi signal strength.  This is the 2nd best out of 4 levels. -->
    <string name="wifi_signal_2">正常</string>
    <!-- Verbose wifi signal strength.  This is the 3rd best out of 4 levels. -->
    <string name="wifi_signal_1">较弱</string>
    <!-- Verbose wifi signal strength.  This is the worst out of 4 levels. -->
    <!-- Label for the security of a wifi network -->
    <string name="security">安全性</string>
    <!-- Value for the wifi security.  This means no encryption. -->
    <string name="wifi_security_open">开放</string>

    <string name="please_type_passphrase">密码</string>
    <string name="wifi_show_password">显示密码。</string>

    <string name="wifi_change_password">修改密码</string>
    <string name="button_change_password">修改密码</string>
    <!-- An edit field's grayed out value when it has not been modified -->
    <string name="wifi_password_unchanged">（未更改）</string>
    <!-- Button caption to save a configuration wifi -->
    <string name="wifi_save_config">保存</string>

    <string name="toastFailed">连接失败请重试！</string>
    <string name="buttonOp">更多……</string>
    <string name="hint_input">请输入密码！</string>
    <string name="adhoc_not_supported_yet">Android 平台目前不支持连接到 AdHoc！</string>
</resources>
